// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`semi.js - {"arrowParens":"always","semi":false} format 1`] = `
====================================options=====================================
arrowParens: "always"
parsers: ["babel", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
a => {}

=====================================output=====================================
;(a) => {}

================================================================================
`;

exports[`semi.js - {"arrowParens":"avoid","semi":false} format 1`] = `
====================================options=====================================
arrowParens: "avoid"
parsers: ["babel", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
a => {}

=====================================output=====================================
a => {}

================================================================================
`;
